--- a/чвв/home.html
+++ b/чвв/home.html
@@ -563,7 +563,7 @@ body.dark-theme #searchStatus {
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <!-- Основная логика -->
-  <script type="module" src="/home.js"></script>
+  <script type="module" src="home.js"></script>
   
   
 </body>
