--- a/чвв/home.html
+++ b/чвв/home.html
@@ -405,6 +405,7 @@ body.dark-theme #searchStatus {
   </style>
 </head>
 <body>
+  <div id="requestList" class="request-list"></div>
     <!-- шапка (опционально) -->
     <div id="header"></div>
   
